Entity support added, StringSearchPattern in DB also added

--- a/src/main/resources/templates/fragments/maven-pom-tree-view.html
+++ b/src/main/resources/templates/fragments/maven-pom-tree-view.html
@@ -54,8 +54,114 @@
                   <div class="col-4 text-start">6223</div>
                 </div>
                 <div class="row maven-element-list">
-                  <div class="col-8 text-end">Modules:</div>
-                  <div class="col-4 text-start">12</div>
+                  <div class="col-12">
+                    <div class="container-gl">
+                      <div class="row">
+                        <div class="col-8 text-end">Modules:</div>
+                        <div class="col-4 text-start">12</div>
+                      </div>
+                      <div class="row" id="modules-tree">
+                        <div class="col-12">
+                          <ul id="modules-tree-view">
+                            <li>schema-parent</li>
+                            <li>
+                              <a href="#">license</a>
+                              <ul>
+                                <li>schema-parent</li>
+                                <li>
+                                  <a href="#">license</a>
+                                </li>
+                                <li>legacy-parent</li>
+                                <li>auto-build-parent</li>
+                                <li>backend-parent</li>
+                                <li>calendaring-server</li>
+                                <li>custom-sample-parent</li>
+                                <li>authentication</li>
+                                <li>dmt-parent</li>
+                                <li>imap</li>
+                                <li>enterprise-api-parent</li>
+                                <li>ear</li>
+                                <li>webservice-parent</li>
+                                <li>webui-parent</li>
+                                <li>database-parent</li>
+                                <li>designer-parent</li>
+                                <li>build-maven-plugin</li>
+                                <li>report-maven-plugin</li>
+                                <li>tool-parent</li>
+                              </ul>
+                            </li>
+                            <li>legacy-parent</li>
+                            <li>auto-build-parent</li>
+                            <li>backend-parent</li>
+                            <li>calendaring-server</li>
+                            <li>custom-sample-parent</li>
+                            <li>authentication</li>
+                            <li>
+                              <a href="#">dmt-parent</a>
+                              <ul>
+                                <li>schema-parent</li>
+                                <li>
+                                  <a href="#">license</a>
+                                </li>
+                                <li>legacy-parent</li>
+                                <li>auto-build-parent</li>
+                                <li>backend-parent</li>
+                                <li>calendaring-server</li>
+                                <li>custom-sample-parent</li>
+                                <li>authentication</li>
+                                <li>dmt-parent</li>
+                                <li>imap</li>
+                                <li>enterprise-api-parent</li>
+                                <li>ear</li>
+                                <li>webservice-parent</li>
+                                <li>webui-parent</li>
+                                <li>database-parent</li>
+                                <li>designer-parent</li>
+                                <li>
+                                  <a href="#">build-maven-plugin</a>
+                                  <ul>
+                                    <li>schema-parent</li>
+                                    <li>
+                                      <a href="#">license</a>
+                                    </li>
+                                    <li>legacy-parent</li>
+                                    <li>auto-build-parent</li>
+                                    <li>backend-parent</li>
+                                    <li>calendaring-server</li>
+                                    <li>custom-sample-parent</li>
+                                    <li>authentication</li>
+                                    <li>dmt-parent</li>
+                                    <li>imap</li>
+                                    <li>enterprise-api-parent</li>
+                                    <li>ear</li>
+                                    <li>webservice-parent</li>
+                                    <li>webui-parent</li>
+                                    <li>database-parent</li>
+                                    <li>designer-parent</li>
+                                    <li>build-maven-plugin</li>
+                                    <li>report-maven-plugin</li>
+                                    <li>tool-parent</li>
+                                  </ul>
+                                </li>
+                                <li>report-maven-plugin</li>
+                                <li>tool-parent</li>
+                              </ul>
+                            </li>
+                            <li>imap</li>
+                            <li>enterprise-api-parent</li>
+                            <li>ear</li>
+                            <li>webservice-parent</li>
+                            <li>webui-parent</li>
+                            <li>database-parent</li>
+                            <li>designer-parent</li>
+                            <li>build-maven-plugin</li>
+                            <li>report-maven-plugin</li>
+                            <li>tool-parent</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="row maven-element-list">
                   <div class="col-8 text-end">Profiles:</div>
