--- a/src/main/resources/templates/import-excel-file.html
+++ b/src/main/resources/templates/import-excel-file.html
@@ -5,66 +5,11 @@
   <title>Import Excel file data into DB</title>
   <link th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+  <link th:href="@{/css/tree-list-view.css}" rel="stylesheet" />
 
   <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" defer></script>
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-
-  <style>
-    body {
-      padding: 15px;
-    }
-    .list-group.list-group-tree {
-      padding: 0;
-    }
-    .list-group.list-group-tree .list-group {
-      margin-bottom: 0;
-    }
-    .list-group.list-group-tree > .list-group > .list-group-item {
-      padding-left: 30px;
-    }
-    .list-group.list-group-tree > .list-group > .list-group > .list-group-item {
-      padding-left: 45px;
-    }
-    .list-group.list-group-tree > .list-group > .list-group > .list-group-item > .list-group-item {
-      padding-left: 60px;
-    }
-    .list-group.list-group-tree > .list-group > .list-group > .list-group-item > .list-group-item > .list-group-item {
-      padding-left: 75px;
-    }
-    .list-group.list-group-tree > .list-group > .list-group > .list-group-item > .list-group-item > .list-group-item > .list-group-item {
-      padding-left: 90px;
-    }
-    .list-group-item .fa {
-      margin-right: 5px;
-    }
-    .fa-chevron:before {
-          content: "\f054"; /*right*/
-    }
-    .in > .fa-chevron:before {
-          content: "\f078"; /*down*/
-    }
-  </style>
-  <script>
-    $(function() {
-        // delegated handler
-        $(".list-group-tree").on('click', "[data-toggle=collapse]", function(){
-          $(this).toggleClass('in')
-            $(this).next(".list-group.collapse").collapse('toggle');
-
-          // next up, when you click, dynamically load contents with ajax - THEN toggle
-          return false;
-        })
-
-        let disabledImportButton = false;
-    });
-
-    function importData() {
-      console.log('Importing data...');
-      let form = document.getElementById('import-form');
-      form.action='/lookup-table/import-data';
-      form.submit();
-    }
-  </script>
+  <script th:src="@{/js/tree-list-view.js}" defer></script>
 </head>
 <body>
   <div class="container text-sm">
