--- a/src/main/resources/templates/database-utils.html
+++ b/src/main/resources/templates/database-utils.html
@@ -15,6 +15,7 @@
 
     <meta charset="UTF-8">
     <title>Database Utils</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/images/database-tools-favicon.ico}">
   </head>
   <body>
     <div class="vertical-container">
