--- a/src/main/resources/templates/diagnostic-patch.html
+++ b/src/main/resources/templates/diagnostic-patch.html
@@ -3,23 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Diagnostic Patch Util</title>
+        <link rel="icon" type="image/x-icon" th:href="@{/images/diagnostic-patch-favicon.ico}">
         <link th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" rel="stylesheet" />
         <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" defer></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
         <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
         <script th:src="@{/js/diagnostic-patch.js}" defer></script>
-
+        <link th:href="@{/css/random.css}" rel="stylesheet" />
     </head>
     <body>
-        <div class="container">
+        <div class="vertical-container">
+            <div class="vertical fs-2 font-weight-bold" th:text="${option.getTitle()}"></div>
+        </div>
+        <div class="container" style="max-width: calc(100% - 60px);">
             <div class="row">
-                <div class="col-12 text-end">
-                    <a href="/diagnostic-patch"><h2>Diagnostic Patch Creator Tool</h2></a>
-                </div>
-            </div>
-            <br/>
-            <div class="row">
-                <div class="col-3">
+                <div class="col-2">
                     <h5>History</h5>
                     <div class="container">
                         <div class="row">
@@ -49,8 +47,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-9">
-                    <div class="container">
+                <div class="col-10">
+                    <br><br>
+                    <!-- <div class="container"> -->
                         <div class="row">
                             <div class="col-12">
                                 <form action="/diagnostic-patch/process" method="post" id="diagnostic-patch-form" >
@@ -108,8 +107,8 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="form-group row text-end">
-                                        <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+                                    <div class="text-center">
+                                        <button type="submit" class="btn btn-primary btn-sm">Process Info</button>
                                     </div>
                                 </form>
                             </div>
@@ -162,7 +161,7 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
