--- a/src/main/resources/templates/maven-project.html
+++ b/src/main/resources/templates/maven-project.html
@@ -8,7 +8,7 @@
     <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" defer></script>
     <link th:href="@{/css/maven-project.css}" rel="stylesheet" />
     <script th:src="@{/js/maven-project.js}" defer></script>
-
+    <link rel="icon" type="image/x-icon" th:href="@{/images/maven-favicon.ico}">
 </head>
 <body>
     <form action="/maven-project/project-view" method="get">
