--- a/src/main/resources/templates/database-utils.html
+++ b/src/main/resources/templates/database-utils.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" defer></script>
     <script src="https://cdn.datatables.net/2.2.0/js/dataTables.js"></script>
+    <script th:src="@{/js/random.js}" defer></script>
     <script th:src="@{/js/database.js}" defer></script>
 
     <meta charset="UTF-8">
