--- a/src/main/resources/templates/import-excel-file.html
+++ b/src/main/resources/templates/import-excel-file.html
@@ -10,6 +10,7 @@
   <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" defer></script>
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   <script th:src="@{/js/tree-list-view.js}" defer></script>
+  <link rel="icon" type="image/x-icon" th:href="@{/images/teamconnect-favicon.ico}">
 </head>
 <body>
   <div class="container text-sm">
