--- a/src/main/resources/templates/snapshots.html
+++ b/src/main/resources/templates/snapshots.html
@@ -17,7 +17,6 @@
     <script th:src="@{/js/database.js}" defer></script> -->
     <script type="text/html">
       $(document).ready(function() {
-      debugger;
         addSnapshotGroupListener();
         addDbSnapshotListener()
       });
@@ -50,7 +49,7 @@
                       <!-- <span th:text="${databaseSnapshot.getSnapshotFileName()}"></span> -->
                       <span class="badge rounded-pill float-end bg-secondary db-snapshot-badge">
                         <span th:attr="data-path=${databaseSnapshot.getRelativePath()}" class="db-snapshot" onclick="javascript:loadDbSnapshotDetails($(this));">[[${databaseSnapshot.getFormatedCreationDate()}]]</span>
-                        <i class='bi bi-trash' th:attr="data-path=${databaseSnapshot.getRelativePath()}" onclick="javascript:deleteSnapshot(this);"></i>
+                        <i class='bi bi-trash' th:attr="data-path=${databaseSnapshot.getRelativePath()}" style="cursor: pointer;" onclick="javascript:deleteSnapshot(this);"></i>
                       </span>
                     </div>
                   </div>
@@ -118,7 +117,7 @@
                 <div class="row">
                   <div class="col-4">
                     <h6 class="border-bottom">Table List</h6>
-                    <div class="list-group list-group-flush" id="database-table-list">
+                    <div class="list-group list-group-flush" id="database-table-list" style="overflow-y: auto; max-height: 550px;">
                     </div>
                   </div>
                   <div class="col-8">
@@ -136,6 +135,11 @@
 
                         </tfoot>
                       </table>
+                    </div>
+                    <hr>
+                    <h6 class="text-end border-bottom">JPA Entity</h6>
+                    <div id="jpa-entity">
+                      <code id="jpa-entity-java-code" onclick="javascript:copyJpaEntityCodeToClipboard();"></code>
                     </div>
                   </div>
                 </div>
