--- a/src/main/resources/templates/maven-project.html
+++ b/src/main/resources/templates/maven-project.html
@@ -7,6 +7,7 @@
 
     <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" defer></script>
     <link th:href="@{/css/maven-project.css}" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script th:src="@{/js/maven-project.js}" defer></script>
     <link rel="icon" type="image/x-icon" th:href="@{/images/maven-favicon.ico}">
 </head>
