--- a/src/main/resources/templates/snapshots.html
+++ b/src/main/resources/templates/snapshots.html
@@ -138,8 +138,8 @@
                     </div>
                     <hr>
                     <h6 class="text-end border-bottom">JPA Entity</h6>
-                    <div id="jpa-entity">
-                      <code id="jpa-entity-java-code" onclick="javascript:copyJpaEntityCodeToClipboard();"></code>
+                    <div id="jpa-entity" onclick="javascript:copyJpaEntityCodeToClipboard();" style="cursor: pointer;" title="Click in order to copy the class code to clipboard.">
+                      <code id="jpa-entity-java-code"></code>
                     </div>
                   </div>
                 </div>
