Still work in progress

--- a/src/main/resources/templates/snapshot-comparator.html
+++ b/src/main/resources/templates/snapshot-comparator.html
@@ -48,7 +48,7 @@
                     <button type="button" id="comparator-btn" class="btn btn-primary btn-sm">Compare Snapshots!</button>
                 </div>
                 <hr>
-                <div class="row">
+                <div class="row" style="font-size: 12px;">
                     <div id="comparator-results" class="col-12"></div>
                 </div>
             </div>
