--- a/src/main/resources/templates/snapshots.html
+++ b/src/main/resources/templates/snapshots.html
@@ -77,12 +77,18 @@
             </div>
             <div class="form-group row">
               <label for="username" class="col-sm-2 col-form-label">DB User:</label>
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                 <input type="text" class="form-control" id="username">
               </div>
               <label for="password" class="col-sm-2 col-form-label">Password:</label>
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                 <input type="password" class="form-control" id="password">
+              </div>
+              <div class="form-check col-sm-2 text-start" style="padding-top: 6px;">
+                <input class="form-check-input" type="checkbox" value="" id="retrieveData">
+                <label class="form-check-label" for="retrieveData">
+                  With Data
+                </label>
               </div>
             </div>
             <div class="form-group row">
