--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,15 +29,24 @@
                 <h5>Generic Tools</h5>
                 <div th:if="${config!=null && config.getGenericOptions()!=null}" class="list-group">
                     <button th:each="item, iStat : ${config.getGenericOptions()}"
-                            th:text="${item.getTitle()}" th:attr="data-option=${item.toJsonString()}"
-                            onclick="javascript:showInfoCard(this, 'Generic');" type="button"
-                            class="list-group-item list-group-item-action random-options"></button>
+                            th:text="${item.getTitle()}"
+                            th:attr="data-option=${item.toJsonString()},
+                            data-background-class=${config.getBootstrapBackgroundClass()},
+                            data-border-class=${config.getBootstrapBorderClass()},
+                            data-text-class=${config.getBootstrapTextClass()}"
+                            onClick="javascript:showInfoCard(this, 'Generic' );"
+                            type="button" class="list-group-item list-group-item-action random-options"></button>
                 </div>
                 <hr>
                 <h5>Specific Tools</h5>
                 <div th:if="${config!=null && config.getSpecificOptions()!=null}" class="list-group">
-                    <button th:each="item, iStat : ${config.getSpecificOptions()}" th:text="${item.getTitle()}"
-                            th:attr="data-option=${item.toJsonString()}" onclick="javascript:showInfoCard(this, 'Specific');"
+                    <button th:each="item, iStat : ${config.getSpecificOptions()}"
+                            th:text="${item.getTitle()}"
+                            th:attr="data-option=${item.toJsonString()},
+                            data-background-class=${config.getBootstrapBackgroundClass()},
+                            data-border-class=${config.getBootstrapBorderClass()},
+                            data-text-class=${config.getBootstrapTextClass()}"
+                            onClick="javascript:showInfoCard(this, 'Generic' );"
                             type="button" class="list-group-item list-group-item-action random-options"></button>
                 </div>
             </div>
@@ -47,7 +56,7 @@
                     <h5 style="color:white;">Generic Options:</h5>
                     <div class="card" id="card-info">
                         <h5 class="card-header" id="card-info-option-type">Generic Tool</h5>
-                        <div class="card-body">
+                        <div class="card-body" id="card-body">
                             <h5 class="card-title" id="card-info-title">Maven Project Analyzer</h5>
                             <p class="card-text" id="card-info-description">With supporting text below as a natural lead-in to additional content.</p>
                             <a id="card-info-link" href="/maven-project" target="_blank" class="btn btn-primary">Go to page</a>
