Snapshot comparator improved, not it's able to show in table format the resutls

--- a/src/main/resources/templates/random-contact-manager.html
+++ b/src/main/resources/templates/random-contact-manager.html
@@ -2,7 +2,7 @@
   <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
       <meta charset="UTF-8">
-      <title>Random User Manager</title>
+      <title>Random Contact Manager</title>
       <link rel="icon" type="image/x-icon" th:href="@{/images/random-user-favicon.ico}">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
