Code related to Expenses

--- a/src/main/resources/templates/random-dictionary-form.html
+++ b/src/main/resources/templates/random-dictionary-form.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <!-- TODO: Finish dictionary implementation -->
+    <h1 th:text="${entityClass}"></h1>
+    <div th:html="${htmlFormDefinition}"></div>
 </body>
 </html>
